--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,6 @@
 <resources>
-
-    <color name="black_overlay">#66000000</color>
-
+    <!-- Android Style Colors -->
+    <color name="colorAccent">#E040FB</color>
+    <color name="colorPrimary">#4CAF50</color>
+    <color name="colorPrimaryDark">#388E3C</color>
 </resources>
