--- a/app/src/main/res/drawable/splash_screen_bg.xml
+++ b/app/src/main/res/drawable/splash_screen_bg.xml
@@ -3,8 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android" 
     android:shape="rectangle" >
     <gradient
-        android:startColor="#00E676"
-        android:endColor="#69F0AE"
+        android:startColor="#69F0AE"
+        android:endColor="#00E676"
         android:gradientRadius="270"
         android:type="radial"/>
 </shape>
