--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -35,7 +35,7 @@
             android:drawableStart="@drawable/ic_user"
             android:drawablePadding="10dp"
             android:layout_marginTop="-25dp"
-            />
+            android:textColor="@color/primary_text_default_material_dark"/>
 
         <EditText
             android:layout_width="match_parent"
